tests/spec/core_functions/color/rgba/error/two_args.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/rgba/error/two_args.hrx"

mod alpha {

    // Ignoring "test_type", error tests are not supported yet.

    // Ignoring "unit", error tests are not supported yet.
}
mod color {

    // Ignoring "test_type", error tests are not supported yet.
}
